--- a/src/scss/fields/_fields.scss
+++ b/src/scss/fields/_fields.scss
@@ -5,10 +5,6 @@
   padding: 0;
   margin-bottom: $m-md;
 
-  &:last-child {
-	margin-bottom: 0;
-  }
-
   // Generics
   // ------------------------------------
   .foofields-label {
